@@ -1,12 +1,8 @@
 lazy val root = (project in file(".")).
   settings(
-    inThisBuild(List(
-      organization := "com.addmeaning",
-      scalaVersion := "2.11.12",
-      version      := "1.0"
-    )),
-    name := "Spark template",
-    libraryDependencies ++= Seq(
-      core,
-    )
+    test in Test := {
+      val _ = (g8Test in Test).toTask("").value
+    },
+    scriptedLaunchOpts ++= List("-Xms1024m", "-Xmx1024m", "-XX:ReservedCodeCacheSize=128m", "-XX:MaxPermSize=256m", "-Xss2m", "-Dfile.encoding=UTF-8"),
+    resolvers += Resolver.url("typesafe", url("http://repo.typesafe.com/typesafe/ivy-releases/"))(Resolver.ivyStylePatterns)
   )
